--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -105,6 +105,7 @@ body {
 }
 
 .section-title {
+    color: var(--vt-c-custom-text-2);
     text-transform: uppercase;
     font-size: 28px;
     font-weight: bold;
